# divisor-arithmetic

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
benches/smalljac-compare/: README.md  bench.c
scripts/: test.sh
src/: field.rs  lib.rs  poly.rs
src/g2/: mod.rs  tests.rs
src/g2/ramified/: arbitrary.rs  blackbox_tests.rs  char2.rs  mod.rs  not_char2.rs  whitebox_tests.rs
src/g2/split/: arb_tests.rs  arbitrary.rs  blackbox_tests.rs  char2.rs  char2_tests.rs  mod.rs  not_char2.rs  op_counts.rs  test_support.rs  wb_vectors.rs  whitebox_tests.rs
src/g3/: mod.rs
src/generic/: mod.rs  ramified.rs  split.rs
